--- a/index.html
+++ b/index.html
@@ -536,13 +536,13 @@
 					<!-- <span>Your Name</span> -->
 				</div>
 			</div>
-			<div class="FromTo" style="display:flex; column-gap: 15px;"> 
-				<div class="inputs">
+			<div class="FromTo" style="display:flex; column-gap: 15px; flex-direction: column;"> 
+				<div class="inputs" style="display: flex; flex-direction: column;">
 					<label style="text-align: center; margin-bottom: 8px; font-weight: bold;">Check In</label>
 					<input type="date" name="name" required>
 					<!-- <span>Your Name</span> -->
 				</div>
-					<div class="inputs">
+					<div class="inputs" style="display: flex; flex-direction: column;">
 						<label style="text-align: center; margin-bottom: 8px; font-weight: bold;">Check Out</label>
 					<input type="date" name="name" required>
 					<!-- <span>Your Name</span> -->
