--- a/room-description.html
+++ b/room-description.html
@@ -108,13 +108,13 @@
 					<span>City</span>
 				</div>
 				
-				<div class="room-inputs">
+				<div class="room-inputs" style="display: flex; flex-direction: column;">
 					<label>Check In</label>
-					<input type="date" name="checkin" required>
+					<input style="width: 100%;" type="date" name="checkin" required>
 				</div>
-				<div class="room-inputs">
+				<div class="room-inputs" style="display: flex; flex-direction: column;">
 					<label>Check Out</label>
-					<input type="date" name="checkout" required>
+					<input style="width: 100%;" type="date" name="checkout" required>
 				</div>
 				<div class="guests">
 					<div class="room-inputs">
