fix all the edits

--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
 					<span>Enter Your City </span>
 				</div>
 				<div class="enquire-now-fields">
+					<select required>
+						<option value="disabled selected">Choose a Category</option>
+						<option value="">Super Deluxe with Mountain View</option>
+						<option value="">Delux Rooms</option>
+						<option value="">Roof top Pent House</option>
+					</select>
+				</div>
+				<div class="enquire-now-fields">
 					<div class="enquire-now-fields-insides">
 						<div class="enquire-selects">
 							<h4>Check In</h4>
@@ -523,6 +531,15 @@
 			<div class="inputs">
 				<input type="text" name="location" required>
 				<span>Your City</span>
+			</div>
+			<div class="inputs">
+				<!-- <label>Select your category</label> -->
+				<select required>
+					<option value="disabled selected">Choose a Category</option>
+					<option value="">Super Deluxe with Mountain View</option>
+					<option value="">Delux Rooms</option>
+					<option value="">Roof top Pent House</option>
+				</select>
 			</div>
 			<div class="FromTo" style="display:flex; column-gap: 15px;"> 
 				<div class="inputs">
