--- a/room-description-3.html
+++ b/room-description-3.html
@@ -107,6 +107,14 @@
 					<input type="text" name="city" required>
 					<span>City</span>
 				</div>
+				<div class="room-inputs">
+					<select required>
+						<option value="disabled selected">Choose a Category</option>
+						<option value="">Super Deluxe with Mountain View</option>
+						<option value="">Delux Rooms</option>
+						<option value="">Roof top Pent House</option>
+					</select>
+				</div>
 				
 				<div class="room-inputs">
 					<label>Check In</label>
