--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 	<div class="searchContainer">
 		<div class="logo">
-			<h3>The Holiday <span style="color: var(--main-theme-color);">Inn.</span></h3>
+			<!-- <h3>The Holiday <span style="color: var(--main-theme-color);">Inn.</span></h3> -->
+			<img src="hotel_holiday_inn_logo-removebg.png" class="logo-img">
 			<span class="dot"></span>
 		</div>
 
