fix logo and dot

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="searchContainer">
 		<div class="logo">
 			<!-- <h3>The Holiday <span style="color: var(--main-theme-color);">Inn.</span></h3> -->
-			<img src="hotel_holiday_inn_logo-removebg.png" class="logo-img">
+			<img src="holiday-inn-logo-removebg-preview.png" class="logo-img">
 			<span class="dot"></span>
 		</div>
 
@@ -595,7 +595,8 @@
 	<!-- <img src="footer png.png" class="footerPng"> -->
 	<div class="footer-cols">
 		<div class="footer-secs">
-			<h2>The Holiday <span style="color: var(--main-theme-color);">Inn.</span></h2>
+			<!-- <h2>The Holiday <span style="color: var(--main-theme-color);">Inn.</span></h2> -->
+			<img src="holiday-inn-logo-removebg-preview.png" class="logo-img">
 			<p>Our hotel offers comfortable and spacious rooms with modern amenities to make your stay enjoyable. All rooms are equipped with air conditioning, flat-screen TVs, free Wi-Fi, and private bathrooms. Our friendly staff is available 24/7 to help you with any needs you may have. </p>
 		</div>
 		<div class="footer-secs">
